fix code to work with Java 11